Bug 13138 - libsmbclient: smbc_statvfs over SMB2/SMB3 connection doesn't return any values
Summary: libsmbclient: smbc_statvfs over SMB2/SMB3 connection doesn't return any values
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: libsmbclient (show other bugs)
Version: 4.7.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks: 13140
  Show dependency treegraph
 
Reported: 2017-11-14 15:37 UTC by Andreas Schneider
Modified: 2021-02-11 14:21 UTC (History)
4 users (show)

See Also:


Attachments
git-am fix for master. (5.17 KB, patch)
2017-11-14 22:04 UTC, Jeremy Allison
no flags Details
Updated git-am fix for master. (5.15 KB, patch)
2017-11-14 22:18 UTC, Jeremy Allison
jra: review? (gd)
Details
git-am fix cherry-pick from master for 4.7.next, 4.6.next (5.07 KB, patch)
2017-11-15 19:44 UTC, Jeremy Allison
asn: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2017-11-14 15:37:33 UTC
smbc_statvfs over SMB2/SMB3 connection doesn't return any values. The values are all set to 0.

To reproduce you can use examples/libsmbclient/teststatvfs.c, which gets built as:

./bin/teststatvfs


It works just fine with smbclient!
Comment 1 Jeremy Allison 2017-11-14 21:22:17 UTC
Ah, this is a function that has a missing SMB2-escape path. In other words it's still SMB1 only.

Let me look at what needs adding here.
Comment 2 Jeremy Allison 2017-11-14 21:51:40 UTC
The smbclient "volume" command is also missing a call out to SMB2. I'll log a separate bug for that.
Comment 3 Jeremy Allison 2017-11-14 22:04:11 UTC
Created attachment 13780 [details]
git-am fix for master.

Tested using bin/teststatvfs.
Comment 4 Jeremy Allison 2017-11-14 22:18:46 UTC
Created attachment 13781 [details]
Updated git-am fix for master.

Corrected the comments that were in the wrong place in the previous patch. This is the version I've also sent to samba-technical for review.
Comment 5 Jeremy Allison 2017-11-15 19:44:48 UTC
Created attachment 13784 [details]
git-am fix cherry-pick from master for 4.7.next, 4.6.next
Comment 6 Andreas Schneider 2017-11-16 10:56:26 UTC
Karolin, please add the patch to the relevant branches. Thanks!
Comment 7 Karolin Seeger 2017-11-17 09:03:12 UTC
(In reply to Andreas Schneider from comment #6)
Pushed to autobuild-v4-{7,6}-test.
Comment 8 Karolin Seeger 2017-11-22 08:15:16 UTC
(In reply to Karolin Seeger from comment #7)
Pushed to both branches.
Closing out bug report.

Thanks!